# gaia

./: Cargo.toml  README.md
.github/workflows/: atlas-deploy.yml  hermes-deploy.yml
api/: docker-compose.yml  main.ts  package.json  vitest.config.ts
api/drizzle/: 0007_public_scorpion.sql  0008_loving_stingray.sql
api/drizzle/meta/: 0007_snapshot.json  0008_snapshot.json  _journal.json
api/src/search/: index.ts
api/src/services/: environment.ts  ipfs.ts
api/src/services/search/: client.ts  index.ts  opensearch.ts  types.ts
api/src/services/storage/: schema.ts
atlas/: Cargo.toml  Dockerfile  README.md
atlas/benches/: transitive.rs
atlas/docs/: algorithm-overview.md  graph-concepts.md  storage.md  topics-and-edits.md  transitive-graph-implementation.md
atlas/docs/agents/plans/: 0000-atlas-implementation-roadmap.md  0001-canonical-graph-implementation-plan.md  0002-transitive-graph-implementation-plan.md
atlas/src/: convert.rs  lib.rs  main.rs
atlas/src/graph/: hash.rs  memory.rs  mod.rs  state.rs  transitive.rs  tree.rs
cache/src/: main.rs
deployer/: deployed.json  main.ts
deployer/data/: academia.json  crypto-events.json  education.json  industries.json  regions.json  root.json  technology.json
docs/: hermes-atlas-architecture.md  knowledge-engine-architecture.md  knowledge-engine-durable-storage.md  knowledge-engine-storage.md  knowledge-engine.md  mock-substream-unification.md
hermes/: PRODUCTION-SETUP.md  README.md  cleanup.sh  connect.sh  deploy.sh  docker-compose.yaml  kafka-broker-3node.yaml  kafka-broker.yaml  kafka-ui.yaml  protobuf-configmap.yaml
hermes-processor/: Cargo.toml  Dockerfile  README.md
hermes-processor/src/: main.rs
hermes-producer/: Cargo.toml  README 2.md  README.md  build.rs
hermes-producer/src/: main.rs
hermes-schema/: Makefile  README.md
hermes-schema/proto/: user_event.proto
hermes/argocd/: README.md  hermes-application.yaml
hermes/k8s/: atlas.yaml  hermes-processor.yaml  kafka-broker.yaml  kustomization.yaml
indexer/src/: main.rs
indexer/tests/: integration.rs
indexer_utils/: Cargo.toml
indexer_utils/src/: id.rs
mock-substream/: Cargo.toml
mock-substream/src/: events.rs  generator.rs  lib.rs  name_description.rs  test_topology.rs
sdk/: Cargo.toml
sdk/src/core/: ids.rs  mod.rs
search-indexer/: Cargo.toml  Dockerfile  README.md
search-indexer-deploy/: README.md  docker-compose.yaml
search-indexer-deploy/base/: OS_k8s.json  kustomization.yaml  search-indexer.yaml
search-indexer-deploy/k8s/: kustomization.yaml  monitoring.yaml  opensearch.yaml  search-indexer.yaml
search-indexer-deploy/load-tests-rust/: Cargo.toml  README.md
search-indexer-deploy/load-tests-rust/results/: querying-1764964088-report.txt  querying-1764964088-results.csv  querying-1764964088-results.json  querying-1764964754-report.txt  querying-1764964754-results.csv  querying-1764964754-results.json
search-indexer-deploy/load-tests-rust/src/: clients.rs  config.rs  generators.rs  loaders.rs  main.rs  metrics.rs  reporter.rs  scenarios.rs
search-indexer-deploy/overlays/local/: kustomization.yaml  monitoring-patch.yaml  opensearch-patch.yaml
search-indexer-deploy/scripts/: local.sh
search-indexer-ingest/: Cargo.toml  README.md
search-indexer-ingest/src/: lib.rs
search-indexer-ingest/src/consumer/: kafka_consumer.rs  messages.rs  mod.rs
search-indexer-ingest/src/errors/: mod.rs
search-indexer-ingest/src/loader/: mod.rs
search-indexer-ingest/src/orchestrator/: mod.rs
search-indexer-ingest/src/processor/: entity_processor.rs
search-indexer-pipeline/: Cargo.toml  README.md
search-indexer-pipeline/src/: lib.rs
search-indexer-pipeline/src/consumer/: kafka_consumer.rs  messages.rs  mod.rs
search-indexer-pipeline/src/errors/: mod.rs
search-indexer-pipeline/src/loader/: mod.rs
search-indexer-pipeline/src/orchestrator/: mod.rs
search-indexer-pipeline/src/processor/: entity_processor.rs  mod.rs
search-indexer-repository/: ARCHITECTURE.md  Cargo.toml  README.md
search-indexer-repository/src/: client.rs  config.rs  lib.rs  types.rs  utils.rs
search-indexer-repository/src/errors/: mod.rs  search_error.rs  search_index_error.rs
search-indexer-repository/src/interfaces/: mod.rs  search_engine_client.rs  search_index_provider.rs
search-indexer-repository/src/opensearch/: client.rs  index_config.rs  mod.rs  queries.rs
search-indexer-shared/: Cargo.toml  README.md
search-indexer-shared/src/types/: entity_document.rs  search_query.rs  search_result.rs
search-indexer/src/: lib.rs  main.rs
search-indexer/src/config/: dependencies.rs  mod.rs
