[package]
name = "hermes-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build", "zstd"] }
prost = "0.13.5"
chrono = "0.4"
hex = "0.4"
wire = { path = "../wire" }
hermes-schema = { path = "../hermes-schema" }
mock-substream = { path = "../mock-substream" }
sdk = { path = "../sdk" }
indexer_utils = { path = "../indexer_utils" }

[build-dependencies]
prost-build = "0.13.5"
