[package]
name = "search-indexer-pipeline"
version = "0.1.0"
edition = "2021"
description = "Pipeline components for the search indexer (consumer, processor, loader)"

[dependencies]
search-indexer-shared = { path = "../search-indexer-shared" }
search-indexer-repository = { path = "../search-indexer-repository" }
hermes-schema = { path = "../hermes-schema" }
wire = { path = "../wire" }
indexer_utils = { path = "../indexer_utils" }

rdkafka = { version = "0.36.2", features = ["cmake-build", "zstd"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
prost = "0.13.5"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
tracing = "0.1.41"
serde_json = "1.0.140"
futures = "0.3.31"
bs58 = "0.5.1"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "test-util"] }

