[package]
name = "search-index-load-tests"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "load-test"
path = "src/main.rs"

[dependencies]
opensearch = { version = "2", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3"
colored = "2.1"
url = "2.5"
urlencoding = "2.1"
rand = "0.8"

